# Hello-FastApi

./: .env.example  .gitignore  AGENTS.md  CODEBUDDY.md  README.md  dev.db  manage.py  pyproject.toml
service/: .env.development  .env.example  .env.production  .env.testing  .gitignore  CODEBUDDY.md  Jenkinsfile  README.md  alembic.ini  mypy.ini  pyproject.toml
service/.codebuddy/plans/: 引入_fastcrud_重构项目_59cc7fbb.md
service/alembic/: env.py  script.py.mako
service/alembic/versions/: 001_initial_schema.py
service/docker/: Dockerfile  docker-compose.yml
service/docker/Jenkins/: deploy.sh
service/docs/: code-quality-report.md  history_202604182132.md
service/docs/design/: 大型项目演进路线图.md  核心流程图与时序图.md  系统架构图.md  系统框架分析报告.md  项目架构设计与约束.md  项目问题清单.md
service/docs/guide/: alembic.md  cli-commands.md  deployment.md  development.md  environment.md  testing.md
service/docs/superpowers/plans/: 2026-05-04-replace-fastcrud-with-sqlmodel-native.md
service/scripts/: cli.py  lint.sh  setup_dev.bat  setup_dev.sh  test_api.ps1  test_buttons.ps1  update_service_calls.py  verify_api.py
service/sql/: hello_fastapi.sql
service/src/: __init__.py  main.py
service/src/api/: common.py  constants.py  dependencies.py
service/src/api/common/: __init__.py  error_response.py  health_response.py  message_response.py  model_utils.py  page_response.py  response_builder.py  unified_response.py  user_formatter.py
service/src/api/dependencies/: __init__.py  auth.py  auth_service.py  cache_service.py  department_service.py  dictionary_service.py  domain_services.py  ip_rule_service.py  log_service.py  menu_service.py  permission_service.py  role_service.py  system_config_service.py  user_service.py
service/src/api/v1/: __init__.py  auth_router.py  auth_routes.py  dept_router.py  dictionary_router.py  ip_rule_router.py  log_router.py  menu_router.py  menu_routes.py  monitor_router.py  permission_router.py  permission_routes.py  rbac_routes.py  role_router.py  role_routes.py  system_config_router.py  system_routes.py  user_router.py  user_routes.py
service/src/application/: __init__.py  validators.py
service/src/application/dto/: __init__.py  auth_dto.py  department_dto.py  dictionary_dto.py  log_dto.py  menu_dto.py  permission_dto.py  rbac_dto.py  role_dto.py  system_config_dto.py  user_dto.py
service/src/config/: __init__.py  asgi.py  settings.py
service/src/core/: __init__.py  constants.py  exception_handlers.py  exceptions.py  lifespan.py  logger.py  middlewares.py  utils.py  validators.py
service/src/domain/: __init__.py  enums.py  exceptions.py  rbac_defaults.py
service/src/infrastructure/: __init__.py
service/tests/: conftest.py  ui_test.py
service/tests/integration/: conftest.py  db_seed.py  test_api.py  test_api_modules.py  test_api_real_flow.py
service/tests/unit/: test_alembic_cli.py  test_api_constants.py  test_application_validators.py  test_auth.py  test_auth_service.py  test_core.py  test_department_service.py  test_dictionary_service.py  test_domain_entities_department.py  test_domain_entities_dictionary.py  test_domain_entities_ip_rule.py  test_domain_entities_log.py  test_domain_entities_menu.py  test_domain_entities_menu_meta.py  test_domain_entities_role.py  test_domain_entities_system_config.py  test_domain_entities_user.py  test_domain_enums.py  test_domain_exceptions.py  test_domain_rbac_defaults.py  test_domain_services_password_service.py  test_domain_services_token_service.py  test_dto_validators.py  test_entities.py  test_exceptions.py  test_ip_rule_service.py  test_limiter.py  test_log_service.py  test_main.py  test_menu_service.py  test_role_service.py  test_system_config_service.py  test_user_service.py  test_validators.py
src/: main.py
(+550 files in other folders)
